--- a/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/Base.lproj/Main.storyboard
@@ -1,10 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="4Qw-1S-kL3">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
+        <!--View Controller-->
+        <scene sceneID="CoM-tZ-iud">
+            <objects>
+                <viewController id="3nO-r2-gh3" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="agi-cs-sBI"/>
+                        <viewControllerLayoutGuide type="bottom" id="2K6-Eb-5Va"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="gIJ-Ld-Wnq">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="g8o-52-KLe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="92" y="-636"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -29,6 +47,7 @@
                                 <state key="normal" image="stop button"/>
                                 <connections>
                                     <action selector="stopRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6uh-7A-poU"/>
+                                    <segue destination="3nO-r2-gh3" kind="show" id="MOM-sl-boT"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to record" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m0f-ev-Bor">
@@ -48,6 +67,7 @@
                             <constraint firstItem="2ZZ-BB-zEc" firstAttribute="centerX" secondItem="m0f-ev-Bor" secondAttribute="centerX" id="yMf-gI-C5h"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="fc1-mL-HFB"/>
                     <connections>
                         <outlet property="recordBTN" destination="07V-kw-NIE" id="TDN-iR-PMP"/>
                         <outlet property="stopRecordingBTN" destination="2ZZ-BB-zEc" id="1Yx-SJ-web"/>
@@ -56,6 +76,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-655" y="-636"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="9Bx-6q-i99">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4Qw-1S-kL3" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="oLK-5E-rW0">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="yr4-3y-OdY"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lbV-mA-26N" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1512" y="-636"/>
         </scene>
     </scenes>
     <resources>
