--- a/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/Base.lproj/Main.storyboard
@@ -5,10 +5,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Play Sound View Controller-->
         <scene sceneID="CoM-tZ-iud">
             <objects>
-                <viewController id="3nO-r2-gh3" sceneMemberID="viewController">
+                <viewController id="3nO-r2-gh3" customClass="PlaySoundViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="agi-cs-sBI"/>
                         <viewControllerLayoutGuide type="bottom" id="2K6-Eb-5Va"/>
@@ -23,10 +23,10 @@
             </objects>
             <point key="canvasLocation" x="92" y="-636"/>
         </scene>
-        <!--View Controller-->
+        <!--Record Sound View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="RecordSoundViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -47,7 +47,6 @@
                                 <state key="normal" image="stop button"/>
                                 <connections>
                                     <action selector="stopRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6uh-7A-poU"/>
-                                    <segue destination="3nO-r2-gh3" kind="show" id="MOM-sl-boT"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to record" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m0f-ev-Bor">
@@ -72,6 +71,7 @@
                         <outlet property="recordBTN" destination="07V-kw-NIE" id="TDN-iR-PMP"/>
                         <outlet property="stopRecordingBTN" destination="2ZZ-BB-zEc" id="1Yx-SJ-web"/>
                         <outlet property="tapToRecordLBL" destination="m0f-ev-Bor" id="cxs-aS-qnu"/>
+                        <segue destination="3nO-r2-gh3" kind="show" identifier="stopRecordingSegue" id="pWH-hV-Lj1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
